--- a/data/ui/add_data_advanced.ui
+++ b/data/ui/add_data_advanced.ui
@@ -126,6 +126,21 @@
               </object>
             </child>
             <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="title" translatable="yes">Retrieve label</property>
+                <property name="subtitle" translatable="yes">Try and retrieve label from the header in the dataset</property>
+                <property name="use-underline">True</property>
+                <property name="activatable-widget">guess_headers</property>
+                <child>
+                  <object class="GtkSwitch" id="guess_headers">
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>            
+            <child>
               <object class="GtkButton" id="open_advanced_confirm_button">
                 <property name="hexpand">true</property>
                 <property name="label">Open files</property>
