--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -28,21 +28,28 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkButton" id="undo_button">
-                    <property name="action-name">app.undo</property>
-                    <property name="focusable">1</property>
-                    <property name="receives_default">1</property>
-                    <property name="tooltip-text" translatable="yes">Undo</property>
-                    <property name="icon-name">edit-undo-symbolic</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton" id="redo_button">
-                    <property name="action-name">app.redo</property>
-                    <property name="focusable">1</property>
-                    <property name="receives_default">1</property>
-                    <property name="tooltip-text" translatable="yes">Redo</property>
-                    <property name="icon-name">edit-redo-symbolic</property>
+                  <object class="GtkBox">
+                    <property name="css-classes">linked</property>
+                    <child>
+                      <object class="GtkButton" id="undo_button">
+                        <property name="action-name">app.undo</property>
+                        <property name="focusable">1</property>
+                        <property name="receives_default">1</property>
+                        <property name="tooltip-text" translatable="yes">Undo</property>
+                        <property name="icon-name">edit-undo-symbolic</property>
+                        <property name="css-classes">flat</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="redo_button">
+                        <property name="action-name">app.redo</property>
+                        <property name="focusable">1</property>
+                        <property name="receives_default">1</property>
+                        <property name="tooltip-text" translatable="yes">Redo</property>
+                        <property name="icon-name">edit-redo-symbolic</property>
+                        <property name="css-classes">flat</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
