--- a/data/ui/sample_box.ui
+++ b/data/ui/sample_box.ui
@@ -5,16 +5,12 @@
   <requires lib="libadwaita" version="1.2" />
   <template class="SampleBox" parent="GtkBox">
     <child>
-      <object class="GtkListBoxRow" id="sample_box">
+      <object class="GtkBox" id="sample_box">
+        <property name="margin-start">6</property>
+        <property name="margin-end">6</property>
+        <property name="margin-bottom">9</property>
+        <property name="margin-top">9</property>
         <property name="can-focus">False</property>
-        <child type="start">
-          <object class="GtkLabel" id="sample_ID_label">
-            <property name="margin-start">5</property>
-            <property name="halign">start</property>
-            <property name="margin-end">5</property>
-            <property name="hexpand">true</property>
-          </object>
-        </child>
         <child>
           <object class="GtkCheckButton" id="check_button">
             <property name="halign">start</property>
@@ -23,10 +19,13 @@
               <class name="selection-mode" />
             </style>
           </object>
-        </child>
+        </child>        
         <child>
-          <object class="GtkImage" id="check_mark">
-            <property name="icon-name">emblem-ok-symbolic</property>
+          <object class="GtkLabel" id="sample_ID_label">
+            <property name="margin-start">6</property>
+            <property name="margin-end">6</property>            
+            <property name="halign">start</property>
+            <property name="hexpand">true</property>
           </object>
         </child>
         <child>
