change Export Text
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -461,11 +461,11 @@
   <menu id="primary_menu">
     <section>
       <item>
-        <attribute name="label" translatable="yes">_Save as text</attribute>
+        <attribute name="label" translatable="yes">_Export Data</attribute>
         <attribute name="action">app.save_data</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Export</attribute>
+        <attribute name="label" translatable="yes">_Export Figure</attribute>
         <attribute name="action">app.export_data</attribute>
       </item>
     </section>
