--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -180,6 +180,7 @@
                         <property name="child">
                           <object class="GtkBox">
                             <property name="vexpand">True</property>
+                            <property name="hexpand">False</property>
                             <property name="orientation">vertical</property>
                             <child>
                               <object class="AdwPreferencesGroup">
@@ -191,57 +192,69 @@
                                   <object class="AdwExpanderRow">
                                     <property name="title">Adjust Data</property>
                                     <child>
-                                      <object class="AdwActionRow">
-                                        <property name="activatable-widget">normalize_button</property>
-                                        <property name="subtitle">Normalize data</property>
-                                        <child>
-                                          <object class="GtkButton" id="normalize_button">
-                                            <property name="label">Normalize</property>
-                                            <property name="action-name">app.normalize_data</property>
-                                            <property name="margin-bottom">5</property>
-                                            <property name="margin-top">5</property>
-                                          </object>
-                                        </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Shift all data vertically with respect to each other</property>
-                                        <property name="activatable-widget">shift_vertically_button</property>
+                                      <object class="GtkGrid">
                                         <child>
                                           <object class="GtkButton" id="shift_vertically_button">
                                             <property name="label">Shift</property>
+                                            <property name="tooltip-text" translatable="yes">Shift all data vertically with respect to each other</property>
                                             <property name="action-name">app.shift_vertically</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">0</property>
+                                              <property name="row">0</property>
+                                            </layout>
                                           </object>
                                         </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Smoothen the data</property>
-                                        <property name="activatable-widget">smooth_button</property>
+                                        <child>
+                                          <object class="GtkButton" id="normalize_button">
+                                            <property name="label">Normalize</property>
+                                            <property name="tooltip-text" translatable="yes">Normalize data</property>
+                                            <property name="action-name">app.normalize_data</property>
+                                            <property name="margin-bottom">5</property>
+                                            <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">1</property>
+                                              <property name="row">0</property>
+                                            </layout>
+                                          </object>
+                                        </child>
                                         <child>
                                           <object class="GtkButton" id="smooth_button">
                                             <property name="label">Smoothen</property>
+                                            <property name="tooltip-text" translatable="yes">Smoothen the data</property>
                                             <property name="action-name">app.smooth</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">0</property>
+                                              <property name="row">1</property>
+                                            </layout>
                                           </object>
                                         </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Center the data</property>
-                                        <property name="activatable-widget">center_data_button</property>
                                         <child>
                                           <object class="GtkButton" id="center_data_button">
                                             <property name="label">Center</property>
+                                            <property name="tooltip-text" translatable="yes">Center the data</property>
                                             <property name="action-name">app.center_data</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">1</property>
+                                              <property name="row">1</property>
+                                            </layout>
                                           </object>
                                         </child>
                                       </object>
@@ -313,71 +326,86 @@
                                   <object class="AdwExpanderRow">
                                     <property name="title">Manipulate Data</property>
                                     <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Get the derivative of the data</property>
-                                        <property name="activatable-widget">derivative_button</property>
+                                      <object class="GtkGrid">
                                         <child>
                                           <object class="GtkButton" id="derivative_button">
-                                            <property name="label">Get</property>
+                                            <property name="label">Derivative</property>
+                                            <property name="tooltip-text">Get the derivative of the data</property>
                                             <property name="action-name">app.get_derivative</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">0</property>
+                                              <property name="row">0</property>
+                                            </layout>
                                           </object>
                                         </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Get the indefinite integral of the data</property>
-                                        <property name="activatable-widget">integral_button</property>
                                         <child>
                                           <object class="GtkButton" id="integral_button">
-                                            <property name="label">Get</property>
+                                            <property name="label">Integral</property>
+                                            <property name="tooltip-text">Get the indefinite integral of the data</property>
                                             <property name="action-name">app.get_integral</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">1</property>
+                                              <property name="row">0</property>
+                                            </layout>
                                           </object>
                                         </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Get the Fast Fourier Transform of the data</property>
-                                        <property name="activatable-widget">fourier_button</property>
                                         <child>
                                           <object class="GtkButton" id="fourier_button">
-                                            <property name="label">Get</property>
+                                            <property name="label">FFT</property>
+                                            <property name="tooltip-text">Get the Fast Fourier Transform of the data</property>
                                             <property name="action-name">app.get_fourier</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">0</property>
+                                              <property name="row">1</property>
+                                            </layout>
                                           </object>
                                         </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Get the Inverse Fast Fourier Transform of the data</property>
-                                        <property name="activatable-widget">inverse_fourier_button</property>
                                         <child>
                                           <object class="GtkButton" id="inverse_fourier_button">
-                                            <property name="label">Get</property>
+                                            <property name="label">Inverse FFT</property>
+                                            <property name="tooltip-text">Get the Inverse Fast Fourier Transform of the data</property>
                                             <property name="action-name">app.get_inverse_fourier</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">1</property>
+                                              <property name="row">1</property>
+                                            </layout>
                                           </object>
                                         </child>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="subtitle">Perform custom transformations on the data</property>
-                                        <property name="activatable-widget">transform_data_button</property>
                                         <child>
                                           <object class="GtkButton" id="transform_data_button">
                                             <property name="label">Transform</property>
+                                            <property name="tooltip-text">Perform custom transformations on the data</property>
                                             <property name="action-name">app.transform_data</property>
                                             <property name="margin-bottom">5</property>
                                             <property name="margin-top">5</property>
+                                            <property name="margin-start">5</property>
+                                            <property name="margin-end">5</property>
+                                            <property name="hexpand">True</property>
+                                            <layout>
+                                              <property name="column">0</property>
+                                              <property name="row">2</property>
+                                              <property name="column-span">2</property>
+                                            </layout>
                                           </object>
                                         </child>
                                       </object>
