add restore view button to quick actions
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -126,6 +126,14 @@
                     <property name="margin-start">12</property>
                     <property name="margin-end">12</property>
                     <child>
+                      <object class="GtkButton" id="home_button">
+                        <property name="icon-name">go-home-symbolic-symbolic</property>
+                        <property name="tooltip-text" translatable="yes">Restore original view</property>
+                        <property name="action-name">app.restore_view</property>
+                        <property name="hexpand">true</property>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkToggleButton" id="pan_button">
                         <property name="icon-name">move-tool-symbolic</property>
                         <property name="tooltip-text" translatable="yes">Left button to pan, right button to zoom. Hold control to to keep aspect ratio fixed</property>
