Changed "Go Forward/Back" to "Previous/next view"
I feel like the standard "Go Forward" and "Go Back" label (which is the same label used by the Matplotlib navigationbar by default I believe) is un-intuitive and difficult to grasp. It is not immediately clear to me what is going forward and back.

--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -477,11 +477,11 @@
         <attribute name="action">app.restore_view</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Go Back</attribute>
+        <attribute name="label" translatable="yes">_Previous View</attribute>
         <attribute name="action">app.view_back</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Go Forward</attribute>
+        <attribute name="label" translatable="yes">_Next View</attribute>
         <attribute name="action">app.view_forward</attribute>
       </item>
     </section>
